--- a/Enternainments.html
+++ b/Enternainments.html
@@ -31,14 +31,14 @@
         <div>
             <li id="main"><span class="main" onclick="openNav()">&#9776;</span></li>
         </div>
-        <div>
-            <li id="KOLSAI_ID">K O L<img class="logo"
-                                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaiibfj8vazQvlEDPUJzC36huDhRhzUn048J56c0mlIZfGqkqQ3KKvcfJcdRLX0vT3_4M&usqp=CAU">A I</li>
+        <div style="margin-top: 1%;">
+            <li id="KOLSAI_ID" style="text-align: center;"><img class="logo"
+                                         src="./logo_moon+light-removebg-preview.png">K O L S A Y</li>
         </div>
         <div class="id">
-            <li class="log-in"><p id="myprofile"></p></li>
+            <li class="log-in"><p id="myprofile">Guest</p></li>
         </div>
-    </span>  
+    </span>   
 <div class="Newsid">Entertainments</div>
 
 
