--- a/inhotels.html
+++ b/inhotels.html
@@ -12,7 +12,7 @@
 
 
 </head>
-<body onload="checkUser()">
+<body onload="hotel(), checkUser()">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
@@ -26,14 +26,14 @@
         <div>
             <li id="main"><span class="main" onclick="openNav()">&#9776;</span></li>
         </div>
-        <div>
-            <li id="KOLSAI_ID">K O L<img class="logo"
-                                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaiibfj8vazQvlEDPUJzC36huDhRhzUn048J56c0mlIZfGqkqQ3KKvcfJcdRLX0vT3_4M&usqp=CAU">A I</li>
+        <div style="margin-top: 1%;">
+            <li id="KOLSAI_ID" style="text-align: center;"><img class="logo"
+                                         src="./logo_moon+light-removebg-preview.png">K O L S A Y</li>
         </div>
         <div class="id">
-            <li class="log-in"><p id="myprofile"></p></li>
+            <li class="log-in"><p id="myprofile">Guest</p></li>
         </div>
-    </span>  
+    </span>   
 
 <div class="certain_hotel_wrapper">
     <h4><a href="./hotels.html">Hotels</a> <a id="hotels_name">/ Kolsay Lakes Town</a></h4>
@@ -137,7 +137,6 @@
         </div>
     </div>
 </div>
-<script src="./inhotels.js"></script>
 
 <footer>
     <div class="f-1">
@@ -198,5 +197,6 @@
     </div>
 </footer>
 <script src="./homepage.js"></script>
+<script src="./inhotels.js"></script>
 </body>
 </html>
