--- a/Enternainments.html
+++ b/Enternainments.html
@@ -36,7 +36,7 @@
                                          src="./logo_moon+light-removebg-preview.png">K O L S A Y</li>
         </div>
         <div class="id">
-            <li class="log-in"><p id="myprofile">Guest</p></li>
+            <li class="log-in"><p id="myprofile"></p></li>
         </div>
     </span>   
 <div class="Newsid">Entertainments</div>
@@ -49,7 +49,7 @@
                           <div class="front" style="background-image: url(https://cdn.shymbulak-dev.com/media/dcd58658eb36e70a1b401c81b1ce176a.png)">
                               <div class="inner">
                                   <p>Alpine park</p>
-                    <span>from 500 ₸/span>
+                    <span>from 5000₸</span>
                               </div>
                           </div>
                           <div class="back">
