--- a/about_us.html
+++ b/about_us.html
@@ -29,7 +29,7 @@
                                          src="./logo_moon+light-removebg-preview.png">K O L S A Y</li>
         </div>
         <div class="id">
-            <li class="log-in"><p id="myprofile" >Guest</p></li>
+            <li class="log-in"><p id="myprofile" ></p></li>
         </div>
     </span>  
 
