animation is done

--- a/Enternainments.html
+++ b/Enternainments.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="./Entertainments.css">
     <script src="./lab8.js"></script>
     
-    <script src="./Entertainments.js"></script>
+    <script src="./entertainment.js"></script>
 </head>
-<body onload="checkUser()">
+<body onload="checkUser(),enter_animation()">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
