--- a/about_us.html
+++ b/about_us.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>Document</title>
     <link rel="stylesheet" href="about_us_styles.css">
     <link rel="stylesheet" href="./footer.css">
     <link rel="stylesheet" href="./header.css">
-    <script src="./lab8.js"></script>
+    <script src="./lab8.js">
+    </script><script src="./homepage.js"></script>
+    </script><script src="./about_us.js"></script>
 </head>
-<body onload="checkUser()">
+<body onload="checkUser(),  about_us_animation()">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
@@ -123,6 +126,5 @@
     </div>
 </footer>
 
-<script src="./homepage.js"></script>
 </body>
 </html>
