--- a/inhotels.html
+++ b/inhotels.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inhotels</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <link rel="stylesheet" href="./hotels.css">
     <link rel="stylesheet" href="./inhotels.css">
     <link rel="stylesheet" href="./footer.css">
@@ -12,7 +14,7 @@
 
 
 </head>
-<body onload="hotel(), checkUser()">
+<body onload="hotel(), checkUser(), inhotels()">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
