--- a/innews.html
+++ b/innews.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <title>Innews</title>
 
     <script src="./news.js"></script>
@@ -15,7 +17,7 @@
     <script src="./lab8.js"></script>
 
 </head>
-<body onload="hotel(),checkUser()">
+<body onload="hotel(),checkUser(),innews_animation()">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
