--- a/homepage.html
+++ b/homepage.html
@@ -16,7 +16,7 @@
     
     
   </head>
-<body onload="checkUser()">
+<body onload="checkUser(), animation()">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
@@ -218,7 +218,7 @@
           <h3>Ride on balloons</h3></a>
       </div>
       <div>
-        <a href="./Entertainments.html">
+        <a href="./Enternainments.html">
           <img src="https://cdn.shymbulak-dev.com/media/ef63cc6caa0c0a3d8e12a33d1e0ac0f7.png" alt="">
           <h3>Go paragliding</h3></a>
       </div>
