--- a/inrestaurants.html
+++ b/inrestaurants.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>InRestaurants</title>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <script src="./restaurants.js"></script>
     <script src="./inrestaurants.js"></script>
 
@@ -17,7 +19,7 @@
 
 
 </head>
-<body onload="hotel(),checkUser()">
+<body onload="hotel(),checkUser(),restaurant_animation()">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
