--- a/news.html
+++ b/news.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
+
     <link rel="stylesheet" href="./header.css">
     <link rel="stylesheet" href="./news.css">
     <link rel="stylesheet" href="./footer.css">
@@ -17,7 +18,7 @@
     <script src="./innews.js"></script>
 
 </head>
-<body onload="checkUser()">
+<body onload="checkUser() ,news_animation()">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
