--- a/restaurants.html
+++ b/restaurants.html
@@ -7,6 +7,7 @@
     <title>Restaurants</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+   
 
     <link rel="stylesheet" href="./header.css">
     <link rel="stylesheet" href="./restaurants.css">
@@ -16,7 +17,7 @@
     <script src="./lab8.js"></script>
 
 </head>
-<body onload="checkUser()">
+<body onload="checkUser(), restaurants_animations()">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
