--- a/ticket.html
+++ b/ticket.html
@@ -7,6 +7,7 @@
     <title>Ticket</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+   
     
     <link rel="stylesheet" href="./footer.css">
     <link rel="stylesheet" href="./ticket.css">
@@ -17,7 +18,7 @@
 
 
 </head>
-<body onload="checkUser()">
+<body onload="checkUser(),tickets_animations()">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="./homepage.html">Main</a>
