--- a/homepage.html
+++ b/homepage.html
@@ -214,7 +214,7 @@
           <h3>To spend the night</h3></a>
       </div>
       <div>
-          <a href="./Entertainments.html"><img src="https://cdn.shymbulak-dev.com/media/dcd58658eb36e70a1b401c81b1ce176a.png" alt="">
+          <a href="./Enternainments.html"><img src="https://cdn.shymbulak-dev.com/media/dcd58658eb36e70a1b401c81b1ce176a.png" alt="">
           <h3>Ride on balloons</h3></a>
       </div>
       <div>
